changed some styles:
* added spinner to load more mutton
* changed "No More" button text
* changed active filter buttons background color

--- a/src/templates/notices/style.scss
+++ b/src/templates/notices/style.scss
@@ -2,8 +2,9 @@
  * Default filter style
  */
 .vp-notice {
-    padding: 5px 15px;
-    color: #fff;
-    background-color: #007acc;
-    border: 1px solid #0a598e;
+    padding: 10px 20px;
+    color: #005b7f;
+    background-color: #f6fbff;
+    border: 1px solid #7da3b2;
+    border-radius: 4px;
 }
