--- a/src/templates/items-list/filter/style.scss
+++ b/src/templates/items-list/filter/style.scss
@@ -49,8 +49,8 @@
         &.vp-filter__item-active > * {
             color: #fff;
             cursor: default;
-            background-color: #007acc;
-            border: 1px solid #007acc;
+            background-color: #6c7781;
+            border: 1px solid #6c7781;
         }
 
         .vp-filter__item-count {
