--- a/src/templates/items-list/pagination/style.scss
+++ b/src/templates/items-list/pagination/style.scss
@@ -49,8 +49,8 @@
         &.vp-pagination__item-active > * {
             color: #fff;
             cursor: default;
-            background-color: #007acc;
-            border: 1px solid #007acc;
+            background-color: #6c7781;
+            border: 1px solid #6c7781;
         }
     }
 
@@ -73,6 +73,54 @@
     .vp-portfolio__loading & .vp-pagination__load-more {
         pointer-events: none;
         cursor: default;
+        border: none;
+        transition: none;
+    }
+    &.vp-pagination__no-more .vp-pagination__load-more {
         opacity: .5;
+    }
+}
+
+/* Loading Spinner */
+// Spinner parameters
+$color: rgba(#000, .1) !default;
+$color_inner: #6c7781 !default;
+$size: 20px !default;
+$size_inner: $size * .35 !default;
+$weight: 2px !default;
+
+.vp-spinner {
+    position: relative;
+    display: inline-block;
+    width: $size;
+    height: $size;
+    margin-top: -2px;
+    vertical-align: middle;
+    border-radius: 50%;
+    box-shadow: inset 0 0 0 $weight $color;
+
+    i {
+        position: absolute;
+        display: block;
+        width: $size_inner;
+        height: $size_inner;
+        overflow: hidden;
+        transform-origin: $size / 2 $size / 2;
+        animation: nk-spinner .4s infinite linear;
+
+        &::after {
+            content: "";
+            display: block;
+            width: $size;
+            height: $size;
+            border-radius: 50%;
+            box-shadow: inset 0 0 0 $weight $color_inner;
+        }
+    }
+}
+
+@keyframes nk-spinner {
+    100% {
+        transform: rotate(360deg);
     }
 }
