changed all options controls to registration inside init action
removed separate list with default option values
fixed checkbox to save also when unchecked

--- a/src/assets/admin/css/style.scss
+++ b/src/assets/admin/css/style.scss
@@ -112,6 +112,10 @@ $grid_sm: 600px !default;
 .vp-col-clearfix {
     flex-basis: 100%;
     max-width: 100%;
+
+    .vp-control-html {
+        margin-bottom: 0;
+    }
 }
 
 
@@ -1202,6 +1206,7 @@ $grid_sm: 600px !default;
  */
 .post-type-vp_lists {
     .CodeMirror {
+        width: 100%;
         text-align: left;
         border: 1px solid #ddd;
 
