removed background color from the load button when loading or no items

--- a/src/templates/items-list/pagination/style.scss
+++ b/src/templates/items-list/pagination/style.scss
@@ -73,6 +73,7 @@
     .vp-portfolio__loading & .vp-pagination__load-more {
         pointer-events: none;
         cursor: default;
+        background-color: transparent;
         border: none;
         transition: none;
     }
