added pagination style and possibility to extend it
slightly improved code to include templates
renamed nk-spinner to vp-spinner

--- a/src/templates/items-list/pagination/style.scss
+++ b/src/templates/items-list/pagination/style.scss
@@ -108,7 +108,7 @@ $weight: 2px !default;
         height: $size_inner;
         overflow: hidden;
         transform-origin: $size / 2 $size / 2;
-        animation: nk-spinner .4s infinite linear;
+        animation: vp-spinner .4s infinite linear;
 
         &::after {
             content: "";
@@ -121,7 +121,7 @@ $weight: 2px !default;
     }
 }
 
-@keyframes nk-spinner {
+@keyframes vp-spinner {
     100% {
         transform: rotate(360deg);
     }
