--- a/src/assets/admin/css/gutenberg-block.scss
+++ b/src/assets/admin/css/gutenberg-block.scss
@@ -2,49 +2,82 @@
  * Gutenberg Block Styles
  */
 .wp-block-nk-visual-portfolio {
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: flex-start;
-    min-height: 0;
-    padding: 14px;
     background-color: #f8f9f9;
 
-    .components-placeholder__label {
-        flex: 1;
+    // placeholder
+    .visual-portfolio-gutenberg-placeholder {
+        flex-direction: row;
+        flex-wrap: wrap;
         justify-content: flex-start;
-        margin-right: 14px;
-        margin-bottom: 0;
+        min-height: 0;
+        padding: 14px;
+        background-color: transparent;
 
-        ~ * {
-            width: auto;
+        .components-placeholder__label {
+            flex: 1;
+            justify-content: flex-start;
+            margin-right: 14px;
+            margin-bottom: 0;
+
+            ~ * {
+                width: auto;
+            }
         }
-    }
 
-    .visual-portfolio-gutenberg-icon {
-        width: 23px;
-        min-width: 23px;
-        height: 23px;
-        min-height: 23px;
-        margin-right: 10px;
-        margin-bottom: 0;
-    }
-
-    .components-placeholder__fieldset {
-        align-items: center;
-        justify-content: flex-start;
-
-        > a {
+        .visual-portfolio-gutenberg-icon {
+            width: 23px;
+            min-width: 23px;
+            height: 23px;
+            min-height: 23px;
             margin-right: 10px;
+            margin-bottom: 0;
+        }
+
+        .components-placeholder__fieldset {
+            align-items: center;
+            justify-content: flex-start;
+
+            > a {
+                margin-right: 10px;
+            }
+        }
+
+        .spinner,
+        .components-base-control {
+            margin: 0;
         }
     }
 
-    .spinner,
-    .components-base-control {
-        margin: 0;
+    // icon
+    img.visual-portfolio-gutenberg-icon {
+        pointer-events: none;
     }
-}
 
-// icon
-img.visual-portfolio-gutenberg-icon {
-    pointer-events: none;
+    // preview
+    .visual-portfolio-gutenberg-preview {
+        position: relative;
+        padding: 15px;
+
+        &::after {
+            content: "";
+            position: absolute;
+            top: 0;
+            right: 0;
+            bottom: 0;
+            left: 0;
+            z-index: 1;
+        }
+
+        // scale preview
+        iframe {
+            // stylelint-disable-next-line
+            width: 200% !important;
+            height: 601px;
+            min-height: 20px;
+            margin-bottom: calc(-50% - 30px);
+            overflow: hidden;
+            transform: scale(.5);
+            transform-origin: 0 0;
+        }
+    }
 }
