--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -324,6 +324,10 @@
             color: #fff;
         }
 
+        h3 {
+            color: inherit;
+        }
+
         a {
             color: inherit;
 
