--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -50,6 +50,9 @@
     width: 100%;
     height: auto;
 }
+.vp-portfolio__item-img {
+    position: relative;
+}
 
 // Preloader
 .vp-portfolio__preloader-wrap {
@@ -395,5 +398,26 @@
 
 // LazyLoad image
 img.visual-portfolio-lazyload:not(.lazyloaded) {
-    background-color: rgba(171, 173, 191, .1);
+    background-color: rgba(132, 136, 177, .05);
+}
+.vp-portfolio__item-img-lazyloading::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 50%;
+    width: 500%;
+    margin-left: -250%;
+    background: linear-gradient(-70deg, rgba(255, 255, 255, 0) 42%, rgba(255, 255, 255, .85) 50%, rgba(255, 255, 255, 0) 58%) 50% 50%;
+    animation: vp-lazyload-placeholder 3s linear infinite;
+}
+@keyframes vp-lazyload-placeholder {
+    0%,
+    80% {
+        transform: translate3d(-30%, 0, 0);
+    }
+    100% {
+        transform: translate3d(30%, 0, 0);
+    }
 }
