--- a/src/assets/admin/css/style.scss
+++ b/src/assets/admin/css/style.scss
@@ -1280,6 +1280,39 @@ $grid_sm: 600px !default;
         border-radius: 0;
         direction: ltr;
     }
+
+    // resize handler
+    .CodeMirror-resizer {
+        display: none;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        height: 20px;
+        margin-top: -2px;
+        font-size: 13px;
+        cursor: row-resize;
+        user-select: none;
+        background-color: #fbfbfb;
+
+        &::before {
+            content: "\2261";
+            position: absolute;
+            left: 50%;
+            color: #999;
+        }
+
+        &:hover {
+            background: #f7f7f7;
+        }
+
+        &:hover::before {
+            color: #000;
+        }
+    }
+    .CodeMirror ~ .CodeMirror-resizer {
+        display: block;
+    }
 }
 
 
