fixed images content source preview img cover

--- a/src/assets/admin/css/style.scss
+++ b/src/assets/admin/css/style.scss
@@ -1125,6 +1125,7 @@ $grid_sm: 600px !default;
                 left: 0;
                 width: 100%;
                 height: 100%;
+                object-fit: cover;
                 border-radius: 3px;
             }
         }
