--- a/src/templates/items-list/items-style/emerge/style.scss
+++ b/src/templates/items-list/items-style/emerge/style.scss
@@ -39,8 +39,8 @@
 
     // Transitions
     .vp-portfolio__item-img img {
-        transition: transform 2s cubic-bezier(.08, .43, .24, 1);
-        will-change: transform;
+        transition: transform 2s cubic-bezier(.08, .43, .24, 1), opacity .3s;
+        will-change: transform, opacity;
     }
 
     .vp-portfolio__item:hover {
