--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -321,15 +321,15 @@
     // fixed top position when WP admin bar showed.
     body.admin-bar & {
         top: 32px;
-        min-height: calc(100% - 32px);
+        height: calc(100% - 32px);
 
         @media screen and (max-width: 782px) {
             top: 42px;
-            min-height: calc(100% - 42px);
+            height: calc(100% - 42px);
         }
         @media screen and (max-width: 600px) {
             top: 0;
-            min-height: 100%;
+            height: 100%;
         }
     }
 
