--- a/src/templates/items-list/items-style/fade/style.scss
+++ b/src/templates/items-list/items-style/fade/style.scss
@@ -36,7 +36,7 @@
         transform: scale(.8);
         will-change: transform, opacity;
 
-        * + * {
+        > * + * {
             margin-top: 4px;
         }
     }
