--- a/src/templates/items-list/items-style/style.scss
+++ b/src/templates/items-list/items-style/style.scss
@@ -26,7 +26,7 @@
         position: relative;
         padding: 10px 15px;
 
-        * + * {
+        > * + * {
             margin-top: 4px;
         }
     }
