fixed fade meta max width in IE11 (resolves #91)

--- a/src/templates/items-list/items-style/fade/style.scss
+++ b/src/templates/items-list/items-style/fade/style.scss
@@ -36,6 +36,10 @@
         transform: scale(.8);
         will-change: transform, opacity;
 
+        > * {
+            max-width: 100%;
+        }
+
         > * + * {
             margin-top: 4px;
         }
