added Filter and Sort Dropdown styles (resolves #39)

--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -60,6 +60,10 @@
 .vp-portfolio__filter-sort-wrap {
     display: flex;
     flex-wrap: wrap;
+
+    .vp-portfolio__sort-wrap {
+        margin-left: auto;
+    }
 }
 
 // figures
