--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -47,12 +47,14 @@
     width: 33.333%;
 }
 .vp-portfolio__item .vp-portfolio__item-img img,
-.vp-portfolio__item .vp-portfolio__item-img a {
+.vp-portfolio__item .vp-portfolio__item-img a,
+.vp-portfolio__item .vp-portfolio__thumbnail-img img {
     display: block;
     width: 100%;
     height: auto;
 }
-.vp-portfolio__item-img {
+.vp-portfolio__item-img,
+.vp-portfolio__thumbnail-img {
     position: relative;
 }
 
@@ -180,16 +182,19 @@
     .vp-portfolio__item-wrap {
         float: none;
     }
-    .vp-portfolio__item-img-wrap {
+    .vp-portfolio__item-img-wrap,
+    .vp-portfolio__thumbnail-img-wrap {
         position: relative;
         display: block;
         overflow: hidden;
     }
-    .vp-portfolio__item-img-wrap::before {
+    .vp-portfolio__item-img-wrap::before,
+    .vp-portfolio__thumbnail-img-wrap::before {
         content: "";
         display: block;
     }
-    .vp-portfolio__item-img img {
+    .vp-portfolio__item-img img,
+    .vp-portfolio__thumbnail-img img {
         object-fit: cover;
         object-position: 50% 50%;
         // stylelint-disable-next-line
@@ -281,6 +286,21 @@
                 right: -4px;
                 bottom: -4px;
                 left: -4px;
+            }
+        }
+    }
+
+    // thumbnails
+    .vp-portfolio__thumbnails-wrap {
+        .vp-portfolio__thumbnail-wrap {
+            cursor: pointer;
+            opacity: .5;
+            transition: .2s opacity;
+
+            &:hover,
+            &:focus,
+            &.swiper-slide-thumb-active {
+                opacity: 1;
             }
         }
     }
@@ -446,7 +466,8 @@ img.visual-portfolio-lazyload {
     transition: .3s opacity;
     will-change: opacity;
 }
-.vp-portfolio__item-img::before {
+.vp-portfolio__item-img::before,
+.vp-portfolio__thumbnail-img::before {
     content: "";
     position: absolute;
     top: 0;
@@ -459,7 +480,8 @@ img.visual-portfolio-lazyload {
     background-size: 500% 100%;
     transition: .3s .3s opacity, .3s .3s visibility;
 }
-.vp-portfolio__item-img-lazyloading {
+.vp-portfolio__item-img-lazyloading,
+.vp-portfolio__thumbnail-img-lazyloading {
     &::before {
         visibility: visible;
         opacity: 1;
