fixed color for items meta

--- a/src/templates/items-list/items-style/fly/style.scss
+++ b/src/templates/items-list/items-style/fly/style.scss
@@ -27,6 +27,8 @@
 
     // meta
     .vp-portfolio__item-meta {
+        color: inherit;
+
         > * + * {
             margin-top: 4px;
         }
