--- a/src/templates/items-list/items-style/fade/style.scss
+++ b/src/templates/items-list/items-style/fade/style.scss
@@ -31,6 +31,7 @@
         justify-content: center;
         width: 100%;
         height: 100%;
+        color: inherit;
         text-align: center;
         transition: transform 1s cubic-bezier(.07, .72, .24, 1), opacity 1s cubic-bezier(.07, .72, .24, 1);
         transform: scale(.8);
