--- a/src/templates/items-list/items-style/fly/style.scss
+++ b/src/templates/items-list/items-style/fly/style.scss
@@ -9,24 +9,32 @@
 
     .vp-portfolio__item-overlay {
         position: absolute;
-        display: flex;
-        flex-wrap: nowrap;
-        align-items: center;
-        justify-content: center;
         top: 0;
         right: 0;
         bottom: 0;
         left: 0;
         padding: 20px;
-        color: #fff;
         text-align: center;
         text-decoration: none;
         background-color: #212125;
         transform: translateY(-100%) translateX(-100%);
     }
 
+    // fix some themes figcaption styles.
+    figcaption.vp-portfolio__item-overlay {
+        font-style: inherit;
+        color: #fff;
+    }
+
     // meta
     .vp-portfolio__item-meta {
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        height: 100%;
         color: inherit;
 
         > * + * {
@@ -71,42 +79,46 @@
     }
 
     // align
-    .vp-portfolio__item-align-left {
-        justify-content: flex-start;
+    .vp-portfolio__item-align-center .vp-portfolio__item-meta {
+        align-items: center;
+        text-align: center;
+    }
+    .vp-portfolio__item-align-left .vp-portfolio__item-meta {
+        align-items: flex-start;
         text-align: left;
     }
-    .vp-portfolio__item-align-right {
-        justify-content: flex-end;
+    .vp-portfolio__item-align-right .vp-portfolio__item-meta {
+        align-items: flex-end;
         text-align: right;
     }
 
-    .vp-portfolio__item-align-top-center {
-        align-items: flex-start;
-        justify-content: center;
+    .vp-portfolio__item-align-top-center .vp-portfolio__item-meta {
+        align-items: center;
+        justify-content: flex-start;
         text-align: center;
     }
-    .vp-portfolio__item-align-top-left {
+    .vp-portfolio__item-align-top-left .vp-portfolio__item-meta {
         align-items: flex-start;
         justify-content: flex-start;
         text-align: left;
     }
-    .vp-portfolio__item-align-top-right {
-        align-items: flex-start;
-        justify-content: flex-end;
+    .vp-portfolio__item-align-top-right .vp-portfolio__item-meta {
+        align-items: flex-end;
+        justify-content: flex-start;
         text-align: right;
     }
 
-    .vp-portfolio__item-align-bottom-center {
-        align-items: flex-end;
-        justify-content: center;
+    .vp-portfolio__item-align-bottom-center .vp-portfolio__item-meta {
+        align-items: center;
+        justify-content: flex-end;
         text-align: center;
     }
-    .vp-portfolio__item-align-bottom-left {
-        align-items: flex-end;
-        justify-content: flex-start;
+    .vp-portfolio__item-align-bottom-left .vp-portfolio__item-meta {
+        align-items: flex-start;
+        justify-content: flex-end;
         text-align: left;
     }
-    .vp-portfolio__item-align-bottom-right {
+    .vp-portfolio__item-align-bottom-right .vp-portfolio__item-meta {
         align-items: flex-end;
         justify-content: flex-end;
         text-align: right;
