fixed overlay position bug in default theme in Fade and Fly effects

--- a/src/templates/items-list/items-style/fade/style.scss
+++ b/src/templates/items-list/items-style/fade/style.scss
@@ -27,6 +27,7 @@
 
     // fix some themes figcaption styles.
     figcaption.vp-portfolio__item-overlay {
+        margin: 0;
         font-style: inherit;
         color: #fff;
     }
