--- a/src/templates/items-list/items-style/fly/style.scss
+++ b/src/templates/items-list/items-style/fly/style.scss
@@ -21,6 +21,7 @@
 
     // fix some themes figcaption styles.
     figcaption.vp-portfolio__item-overlay {
+        margin: 0;
         font-style: inherit;
         color: #fff;
     }
