fixed margin bottom in Content Source Images list

--- a/src/assets/admin/css/layouts-editor.scss
+++ b/src/assets/admin/css/layouts-editor.scss
@@ -813,7 +813,7 @@
         height: 325px;
         padding: 7px;
         margin: -12px;
-        margin-bottom: -25px;
+        margin-bottom: 0;
         overflow: auto;
         transition: .15s margin-right;
 
