--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -373,11 +373,12 @@
     }
 }
 
-// PhotoSwipe
+// Popup Galleries
 .vp-portfolio__item-popup {
     display: none;
 }
-.vp-pswp {
+.vp-pswp,
+.vp-fancybox {
     z-index: 1500;
 
     // fixed top position when WP admin bar showed.
@@ -394,7 +395,10 @@
             height: 100%;
         }
     }
+}
 
+// PhotoSwipe
+.vp-pswp {
     .pswp__caption {
         background-color: rgba(0, 0, 0, .75);
 
@@ -434,7 +438,6 @@
         z-index: 1;
     }
 
-
     .vp-pswp-video {
         position: relative;
         display: flex;
@@ -468,6 +471,36 @@
                 // stylelint-disable-next-line declaration-no-important
                 height: auto !important;
                 margin: 0;
+            }
+        }
+    }
+}
+
+// Fancybox
+.vp-fancybox {
+    .fancybox-caption__body {
+        font-size: 12px;
+        color: #fff;
+
+        h3 {
+            color: inherit;
+        }
+
+        a {
+            color: inherit;
+
+            &:hover {
+                opacity: .8;
+            }
+        }
+        .vp-portfolio__item-meta-title {
+            margin-top: 0;
+            margin-bottom: 3px;
+            font-size: 14px;
+            color: inherit;
+
+            a {
+                text-decoration: none;
             }
         }
     }
