improved assets loader (load only required css and js) (resolves #124)

--- a/src/assets/css/noscript.scss
+++ b/src/assets/css/noscript.scss
@@ -1,7 +1,5 @@
-/*!
- * Name    : Visual Portfolio Noscript
- * Version : @@plugin_version
- * Author  : nK https://nkdev.info
+/*
+ * Visual Portfolio Noscript
  */
 
 // preloader
