added tree of nodes with classes to better coding in Layouts Custom CSS

--- a/src/assets/admin/css/layouts-editor.scss
+++ b/src/assets/admin/css/layouts-editor.scss
@@ -1054,6 +1054,128 @@
 }
 
 
+$dom_tree_color_bg_node_class: #dcdfe6 !default;
+$dom_tree_color_text_node_class: #595d67 !default;
+
+/**
+ * DOM Tree
+ */
+.vp-dom-tree-help code {
+    display: inline-block;
+    padding: 2px 6px;
+    line-height: 1.2;
+    color: $dom_tree_color_text_node_class;
+    cursor: pointer;
+    background-color: $dom_tree_color_bg_node_class;
+    border-radius: 3px;
+    transition: .15s background-color, .15s color;
+
+    &:hover {
+        color: darken($dom_tree_color_text_node_class, 20%);
+        background-color: darken($dom_tree_color_bg_node_class, 10%);
+    }
+}
+.vp-dom-tree {
+    padding: 15px;
+    padding-top: 1px;
+    padding-bottom: 0;
+    padding-left: 0;
+    font-family: monospace;
+    color: #67666d;
+    background-color: #f9f9fa;
+    border: 1px solid #ddd;
+
+    .spinner {
+        float: none;
+        margin-top: 15px;
+        margin-bottom: 15px;
+    }
+
+    ul {
+        position: relative;
+        padding-left: 15px;
+        list-style: none;
+    }
+
+    // Node
+    .vp-dom-tree-node > div {
+        position: relative;
+        display: inline-block;
+        line-height: 1.6;
+    }
+
+    // Node Class
+    .vp-dom-tree-node-class {
+        display: inline-block;
+        padding: 2px 6px;
+        line-height: 1.2;
+        color: $dom_tree_color_text_node_class;
+        cursor: pointer;
+        background-color: $dom_tree_color_bg_node_class;
+        border-radius: 3px;
+        transition: .15s background-color, .15s color;
+
+        &:hover {
+            color: darken($dom_tree_color_text_node_class, 20%);
+            background-color: darken($dom_tree_color_bg_node_class, 10%);
+        }
+
+        + .vp-dom-tree-node-class {
+            margin-left: 5px;
+        }
+    }
+
+    // Collapse
+    .vp-dom-tree-node-collapse {
+        position: relative;
+        display: inline-block;
+        top: -1px;
+        margin-right: 5px;
+        cursor: pointer;
+        border-top: 6px solid;
+        border-right: 4px solid transparent;
+        border-left: 4px solid transparent;
+
+        &::after {
+            content: "";
+            position: absolute;
+            display: block;
+            top: -12px;
+            right: -10px;
+            bottom: -7px;
+            left: -10px;
+        }
+    }
+    .is-collapsed .vp-dom-tree-node-collapse {
+        transform: rotate(-90deg);
+    }
+    .is-collapsed ~ .vp-dom-tree-child {
+        display: none;
+    }
+
+    // Hover
+    .vp-dom-tree-child {
+        position: relative;
+
+        &::before {
+            content: "";
+            position: absolute;
+            display: block;
+            top: -3px;
+            right: 0;
+            bottom: -3px;
+            left: 8px;
+            background-color: #f0f0f1;
+            border-radius: 4px;
+            opacity: 0;
+            transition: .2s opacity;
+        }
+    }
+    .vp-dom-tree-node:hover ~ .vp-dom-tree-child::before {
+        opacity: 1;
+    }
+}
+
 /**
  * Responsive
  */
